Sat Feb 22 2003  Vitezslav Samel <samel@mail.cz>
	* configure.ac:
	remove AC_FUNC_MALLOC check; this fixes problem with compilation
	on alpha; we should check for size == 0 in joe_malloc()

Wed Feb 19 2003  Vitezslav Samel <samel@mail.cz>
	* b.c, b.h, cmd.c, cmd.h, help.c, kbd.c, kbd.h, macro.c, macro.h,
	main.c, rc.c, rc.h, regex.c, uisrch.c:
	change type of variables holding string to unsigned char *

Wed Feb 19 2003  Vitezslav Samel <samel@mail.cz>
	* b.c, tw.c:
	change type of variables holding time values to time_t

Sat Feb 15 2003  Vitezslav Samel <samel@mail.cz>
	* b.c, b.h, bw.c, config.h, macro.c, regex.c, tty.c, ublock.c, uedit.c,
	uerror.c, uformat.c, uisrch.c, usearch.c, utag.c, utils.c, utils.h,
	vfile.c, vfile.h:
	fix segafults in isalpha(): replace MAXINT with NO_MORE_DATA symbol
	which has value of EOF (-1); that value is permitted to pass into
	isalpha() type functions

Sun Jan  5 2003  Vitezslav Samel <samel@mail.cz>
	* configure.ac:
	newer versions (>= 2.54) of autoconf need AC_PROG_EGREP to prevent
	lockup when running configure; this change require autoconf-2.54
	at least to properly build joe from CVS

Wed Jan  1 2003  Vitezslav Samel <samel@mail.cz>
	* rc.c:
	eliminate "expr, expr" to make sources more readable;
	change "magic number" to the sizeof()

Wed Jan  1 2003  Vitezslav Samel <samel@mail.cz>
	* b.c:
	pisbow() should match the beginning of file and piseow() should match
	the end of file

Sat Dec  7 2002  Vitezslav Samel <samel@mail.cz>
	* kbd.c:
	don't expect all archs have "char == signed char" by default

Sat Dec  7 2002  Vitezslav Samel <samel@mail.cz>
	* blocks.c, vfile.c:
	64bit arch fixes: don't expect pointer fits into int (now we assume
	it fits into unsigned long)

Sat Dec  7 2002  Vitezslav Samel <samel@mail.cz>
	* types.h, usearch.c:
	rename restrict() and restrict member of struct search to make
	joe compile under HPUX with HP C compiler

Mon Aug  5 2002  Vitezslav Samel <samel@mail.cz>
	*** SECURITY ***
	* ufile.c: