@@ -1,3 +1,7 @@
+Sun Mar  2 2003  Vitezslav Samel <samel@mail.cz>
+	* vs.c, vs.h:
+	make vsrm() and slen() of type sELEMENT *
+
 Sat Feb 22 2003  Vitezslav Samel <samel@mail.cz>
 	* configure.ac:
 	remove AC_FUNC_MALLOC check; this fixes problem with compilation
